--- a/HW3_1/S&P500_prediction.ipynb
+++ b/HW3_1/S&P500_prediction.ipynb
@@ -877,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclude  \n",
+    "# Report and Conclude  \n",
     "  \n",
     "1.預測準確度以Neural Network的訓練準確率約70%準確率最高。應該是因為Feature對預測結果的關聯性不大，彼此之間相關程度也差不多，Random forest較沒有辦法根據feature判斷漲或跌。比Logistic Regression好是因為Neural Network是很多Logistic Regression的集合(activation function一樣)。  \n",
     "2.用於預測其他股票的話我認為應該有差不多的準確率，因為若條件相同則其他股票的feature和S&P500是一樣的。不過太多因數影響金融市場，也有可能預測完全失準。  \n",
